# django-movies-app

./: .env.dev  .env.example  .gitignore  Dockerfile  Dockerfile.prod  README.md  docker-compose.yaml  pyproject.toml
src/: conftest.py
src/app/: settings.py  urls.py
src/movies/: admin.py
src/movies/migrations/: 0001_initial.py  0002_movie.py
src/tests/movies/: conftest.py  test_models.py  test_views.py
