[tool.poetry]
name = "src"
version = "0.1.0"
description = "A Django sample project"
authors = ["David Armendariz <darmendariz1998@outlook.com>"]

[tool.taskipy.tasks]
start-django = "docker exec -it django-movies bash"
test = "docker-compose exec movies pytest"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.6"
djangorestframework = "^3.12.2"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
taskipy = "^1.6.0"
pytest = "^6.2.2"
pytest-django = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
